arc-cicd-cluster/manifests/stage/azure-vote.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
  namespace: stage
spec:
  ports:
  - port: 6379
  selector:
    app: azure-vote-back
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: stage
spec:
  ports:
  - port: 80
  selector:
    app: azure-vote-front
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-back
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-back
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      containers:
      - env:
        - name: ALLOW_EMPTY_PASSWORD
          value: "yes"
        image: lucaliacr-microsoft.azurecr.io/azvote/azure-vote-back:d390ae3bfbbc7df39778cc1d36af916c8b7b183c
        name: azure-vote-back
        ports:
        - containerPort: 6379
          name: redis
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-front
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      containers:
      - env:
        - name: REDIS
          value: azure-vote-back
        - name: TITLE
          value: Voting Application
        image: lucaliacr-microsoft.azurecr.io/azvote/azure-vote-front:d390ae3bfbbc7df39778cc1d36af916c8b7b183c
        name: azure-vote-front
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: az-vote-front-ingress
  namespace: stage
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: azure-vote-front
            port:
              number: 80
        path: /(/|$)(.*)
        pathType: Prefix
